// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilePreview > should match snapshot 1`] = `
<div>
  <div
    class="file-preview__container"
  >
    <div
      class="file-preview post-image__column"
    >
      <div
        class="post-image__thumbnail"
      >
        <div
          class="post-image normal"
          style="background-image: url(/api/v4/files/file_id_1/thumbnail); background-size: cover;"
        />
      </div>
      <div
        class="post-image__details"
      >
        <div
          class="post-image__detail_wrapper"
        >
          <div
            class="post-image__detail"
          >
            <span
              class="post-image__name"
            >
              test_filename
            </span>
            <span
              class="post-image__type"
            >
              PNG
            </span>
            <span
              class="post-image__size"
            >
              100B
            </span>
          </div>
        </div>
        <div>
          <a
            class="file-preview__remove"
          >
            <i
              class="icon icon-close"
            />
          </a>
        </div>
      </div>
    </div>
    <div
      class="file-preview post-image__column"
      data-client-id="clientID_1"
    >
      <div
        class="post-image__thumbnail"
      >
        <div
          class="file-icon generic"
        />
      </div>
      <div
        class="post-image__details"
      >
        <div
          class="post-image__detail_wrapper"
        >
          <div
            class="post-image__detail"
          >
            <span
              class="post-image__name"
            >
              file
            </span>
            <span
              class="post-image__uploadingTxt"
            >
              Uploading...
              <span>
                 (50%)
              </span>
            </span>
          </div>
        </div>
        <div>
          <a
            class="file-preview__remove"
          >
            <i
              class="icon icon-close"
            />
          </a>
        </div>
        <div
          class="post-image__progressBar progress"
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="50"
            class="progress-bar"
            role="progressbar"
            style="width: 50%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FilePreview > should match snapshot when props are changed 1`] = `
<div>
  <div
    class="file-preview__container"
  >
    <div
      class="file-preview post-image__column"
    >
      <div
        class="post-image__thumbnail"
      >
        <div
          class="post-image normal"
          style="background-image: url(/api/v4/files/file_id_1/thumbnail); background-size: cover;"
        />
      </div>
      <div
        class="post-image__details"
      >
        <div
          class="post-image__detail_wrapper"
        >
          <div
            class="post-image__detail"
          >
            <span
              class="post-image__name"
            >
              test_filename
            </span>
            <span
              class="post-image__type"
            >
              PNG
            </span>
            <span
              class="post-image__size"
            >
              100B
            </span>
          </div>
        </div>
        <div>
          <a
            class="file-preview__remove"
          >
            <i
              class="icon icon-close"
            />
          </a>
        </div>
      </div>
    </div>
    <div
      class="file-preview post-image__column"
      data-client-id="clientID_1"
    >
      <div
        class="post-image__thumbnail"
      >
        <div
          class="file-icon generic"
        />
      </div>
      <div
        class="post-image__details"
      >
        <div
          class="post-image__detail_wrapper"
        >
          <div
            class="post-image__detail"
          >
            <span
              class="post-image__name"
            >
              file
            </span>
            <span
              class="post-image__uploadingTxt"
            >
              Uploading...
              <span>
                 (50%)
              </span>
            </span>
          </div>
        </div>
        <div>
          <a
            class="file-preview__remove"
          >
            <i
              class="icon icon-close"
            />
          </a>
        </div>
        <div
          class="post-image__progressBar progress"
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="50"
            class="progress-bar"
            role="progressbar"
            style="width: 50%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FilePreview > should match snapshot when props are changed 2`] = `
<div>
  <div
    class="file-preview__container"
  >
    <div
      class="file-preview post-image__column"
    >
      <div
        class="post-image__thumbnail"
      >
        <div
          class="post-image normal"
          style="background-image: url(/api/v4/files/file_id_1/thumbnail); background-size: cover;"
        />
      </div>
      <div
        class="post-image__details"
      >
        <div
          class="post-image__detail_wrapper"
        >
          <div
            class="post-image__detail"
          >
            <span
              class="post-image__name"
            >
              test_filename
            </span>
            <span
              class="post-image__type"
            >
              PNG
            </span>
            <span
              class="post-image__size"
            >
              100B
            </span>
          </div>
        </div>
        <div>
          <a
            class="file-preview__remove"
          >
            <i
              class="icon icon-close"
            />
          </a>
        </div>
      </div>
    </div>
    <div
      class="file-preview post-image__column"
    >
      <div
        class="post-image__thumbnail"
      >
        <div
          class="post-image normal"
          style="background-image: url(/api/v4/files/file_id_2/thumbnail); background-size: cover;"
        />
      </div>
      <div
        class="post-image__details"
      >
        <div
          class="post-image__detail_wrapper"
        >
          <div
            class="post-image__detail"
          >
            <span
              class="post-image__name"
            />
            <span
              class="post-image__type"
            >
              JPG
            </span>
            <span
              class="post-image__size"
            >
              100B
            </span>
          </div>
        </div>
        <div>
          <a
            class="file-preview__remove"
          >
            <i
              class="icon icon-close"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FilePreview > should not render an SVG when SVGs are disabled 1`] = `
<div>
  <div
    class="file-preview__container"
  >
    <div
      class="file-preview post-image__column custom-file"
    >
      <div
        class="post-image__thumbnail"
      >
        <div
          class="file-icon generic"
        />
      </div>
      <div
        class="post-image__details"
      >
        <div
          class="post-image__detail_wrapper"
        >
          <div
            class="post-image__detail"
          >
            <span
              class="post-image__name"
            >
              test_filename
            </span>
            <span
              class="post-image__type"
            >
              SVG
            </span>
            <span
              class="post-image__size"
            >
              100B
            </span>
          </div>
        </div>
        <div>
          <a
            class="file-preview__remove"
          >
            <i
              class="icon icon-close"
            />
          </a>
        </div>
      </div>
    </div>
    <div
      class="file-preview post-image__column"
      data-client-id="clientID_1"
    >
      <div
        class="post-image__thumbnail"
      >
        <div
          class="file-icon generic"
        />
      </div>
      <div
        class="post-image__details"
      >
        <div
          class="post-image__detail_wrapper"
        >
          <div
            class="post-image__detail"
          >
            <span
              class="post-image__name"
            >
              file
            </span>
            <span
              class="post-image__uploadingTxt"
            >
              Uploading...
              <span>
                 (50%)
              </span>
            </span>
          </div>
        </div>
        <div>
          <a
            class="file-preview__remove"
          >
            <i
              class="icon icon-close"
            />
          </a>
        </div>
        <div
          class="post-image__progressBar progress"
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="50"
            class="progress-bar"
            role="progressbar"
            style="width: 50%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FilePreview > should render an SVG when SVGs are enabled 1`] = `
<div>
  <div
    class="file-preview__container"
  >
    <div
      class="file-preview post-image__column"
    >
      <div
        class="post-image__thumbnail"
      >
        <img
          alt="file preview"
          class="post-image normal"
          src="/api/v4/files/file_id_1"
        />
      </div>
      <div
        class="post-image__details"
      >
        <div
          class="post-image__detail_wrapper"
        >
          <div
            class="post-image__detail"
          >
            <span
              class="post-image__name"
            >
              test_filename
            </span>
            <span
              class="post-image__type"
            >
              SVG
            </span>
            <span
              class="post-image__size"
            >
              100B
            </span>
          </div>
        </div>
        <div>
          <a
            class="file-preview__remove"
          >
            <i
              class="icon icon-close"
            />
          </a>
        </div>
      </div>
    </div>
    <div
      class="file-preview post-image__column"
      data-client-id="clientID_1"
    >
      <div
        class="post-image__thumbnail"
      >
        <div
          class="file-icon generic"
        />
      </div>
      <div
        class="post-image__details"
      >
        <div
          class="post-image__detail_wrapper"
        >
          <div
            class="post-image__detail"
          >
            <span
              class="post-image__name"
            >
              file
            </span>
            <span
              class="post-image__uploadingTxt"
            >
              Uploading...
              <span>
                 (50%)
              </span>
            </span>
          </div>
        </div>
        <div>
          <a
            class="file-preview__remove"
          >
            <i
              class="icon icon-close"
            />
          </a>
        </div>
        <div
          class="post-image__progressBar progress"
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="50"
            class="progress-bar"
            role="progressbar"
            style="width: 50%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
